--- a/calendario/styles/calendario.css
+++ b/calendario/styles/calendario.css
@@ -151,3 +151,27 @@ table tr:nth-child(even) {
 .reposicao { background-color: lightblue; }
 .cancelada { background-color: red; }
 .alterouData { background-color: orange; }
+
+.button-container {
+    
+    top: 80px; /* Altura da barra de navegação */
+    width: 100%;
+    
+    justify-content: center;
+    
+    padding: 10px 0; /* Espaçamento interno */
+    z-index: 1000; /* Para garantir que os botões fiquem acima do conteúdo */
+}
+
+.button-container button {
+    width: 120px; /* Largura dos botões */
+    margin:  10px; /* Espaçamento entre os botões */
+    background-color: orange; /* Cor de fundo laranja */
+
+    color: rgb(0, 0, 0);
+    cursor: pointer;
+}
+
+.horaCell {
+    background-color: orange;
+}
