--- a/abas/css/style.css
+++ b/abas/css/style.css
@@ -3,3 +3,23 @@
     font-size: 24px;
     margin-bottom: 10px;
 }
+
+.teacher-buttons {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px; /* Espaço entre os botões */
+}
+
+.teacher-buttons .openIframeButton {
+    background-color: #007bff; /* Cor de fundo azul */
+    color: #fff; /* Cor do texto branco */
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.teacher-buttons .openIframeButton:hover {
+    background-color: #0056b3; /* Cor mais escura ao passar o mouse */
+}
